--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.1",
-    "@types/canvas-confetti": "^1.9.0",
     "autoprefixer": "^10.4.23",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +50,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
@@ -67,6 +67,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
