--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,129 @@
 {
-    "name": "KonuşKoç",
+    "name": "KonuşKoç - Konuşma Koçunuz",
     "short_name": "KonuşKoç",
+    "description": "Kekemelik terapisi ve konuşma becerileri geliştirme uygulaması. Nefes egzersizleri, hızlı okuma, DAF ve daha fazlası.",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#ffffff",
+    "orientation": "portrait",
+    "background_color": "#0a0a0a",
     "theme_color": "#14b8a6",
+    "categories": [
+        "health",
+        "education",
+        "lifestyle"
+    ],
+    "lang": "tr",
+    "dir": "ltr",
+    "scope": "/",
     "icons": [
+        {
+            "src": "/icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
+        {
+            "src": "/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable any"
+        },
         {
             "src": "/favicon.ico",
             "sizes": "64x64 32x32 24x24 16x16",
             "type": "image/x-icon"
         }
-    ]
+    ],
+    "shortcuts": [
+        {
+            "name": "Nefes Egzersizi",
+            "short_name": "Nefes",
+            "description": "Diyafram nefes egzersizine başla",
+            "url": "/exercises/breathing",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-breathing.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "DAF Asistanı",
+            "short_name": "DAF",
+            "description": "Gecikmeli işitsel geri bildirim",
+            "url": "/exercises/daf",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-daf.png",
+                    "sizes": "96x96"
+                }
+            ]
+        },
+        {
+            "name": "Hızlı Okuma",
+            "short_name": "RSVP",
+            "description": "Kelime kelime hızlı okuma",
+            "url": "/exercises/rsvp",
+            "icons": [
+                {
+                    "src": "/icons/shortcut-rsvp.png",
+                    "sizes": "96x96"
+                }
+            ]
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/screenshots/home.png",
+            "sizes": "1080x1920",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Ana Sayfa"
+        },
+        {
+            "src": "/screenshots/exercises.png",
+            "sizes": "1080x1920",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Egzersizler"
+        }
+    ],
+    "related_applications": [],
+    "prefer_related_applications": false
 }
